base/networking/network-policy-allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-egress
  namespace: <APP NS>
spec:
  podSelector:
    matchLabels:
      app: <APP NAME>
  policyTypes:
    - Egress
