base/networking/network-policy-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-ingress
  namespace: <APP NS>
spec:
  podSelector:
    matchLabels:
      app: <APP NAME>
  policyTypes:
    - Ingress
