base/networking/network-policy-deny-all-test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-test
  namespace: test
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
