base/networking/network-policy-deny-all-testing.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-testing
  namespace: testing
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
